--- a/public/LoginPage.html
+++ b/public/LoginPage.html
@@ -31,41 +31,32 @@
 
 
 </head>
-<div class="row">
-  <div class="col-md-4">
-  </div>
-  <div class="col-md-4">
-    <div class="row">
-      <div class="col-md-4">
+
+<body class="login-img3-body">
+
+  <div class="container">
+    <br></br>
+    <form class="login-form" action="index.html">
+      <div class="login-wrap">
+
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" class="form-control" placeholder="Username" autofocus>
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+        <label class="checkbox">
+          <input type="checkbox" value="remember-me"> Remember me
+          <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
+        </label>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+        <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
       </div>
-      <div class="col-lg-14">
-        <body class="login-img3-body">
-          <form class="login-form" action="index.html">
-             <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 150px" >
-            <div class="login-wrap">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="icon_profile"></i></span>
-                <input type="text" class="form-control" placeholder="Username" autofocus>
-              </div>
-              <div class="input-group">
-                <span class="input-group-addon"><i class="icon_key_alt"></i></span>
-                <input type="password" class="form-control" placeholder="Password">
-              </div>
-              <label class="checkbox">
-                <input type="checkbox" value="remember-me"> Remember me
-                <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
-              </label>
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-              <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
-            </div>
-          </form>
-      </div>
-    </div>
+    </form>
+
   </div>
-</div>
-<div class="col-md-4">
-</div>
-</div>
 
 
 </body>
