--- a/public/SubmitSuggestions.html
+++ b/public/SubmitSuggestions.html
@@ -142,10 +142,10 @@
                                 any and all feedback is appreciated as we try to improve your experience.<i class="fa fa-smile-o"></i></p>
                             </div>
                           </div>
-                          <div class="form-group">
-                            <label class="col-sm-2 control-label">From:</label>
+                          <div class="form-group pull-left">
+                            <label class="col-sm-2 control-label ">From:</label>
                             <div class="col-sm-10">
-                              <p class="form-control-static">john.doe@upr.edu</p>
+                              <p class="form-control-static ">john.doe@upr.edu</p>
                             </div>
                           </div>
                           <div class="form-group">
