--- a/public/EditEvent.html
+++ b/public/EditEvent.html
@@ -11,7 +11,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>New Event</title>
+  <title>Edit Group Page </title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,12 +24,6 @@
   <link href="css/elegant-icons-style.css" rel="stylesheet" />
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- date picker -->
-<!-- Include Bootstrap Datepicker -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
-
 
   <!-- color picker -->
 
@@ -123,61 +117,65 @@
             <section class="wrapper">
               <div class="row">
                 <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-calendar"></i> New Event</h3>
+                  <h3 class="page-header"><i class="fa fa-calendar"></i> Edit Event Page</h3>
                   <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                     <li><i class="fa fa-tasks"></i>Event Pages</li>
-                    <li><i class="fa fa-calendar"></i></i> New Event</li>
+                    <li><i class="fa fa-calendar"></i>Edit Event Page</li>
                   </ol>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12">
                   <section class="panel">
-                    <header class="panel-heading">
-                      Event Page Form
+                    <header class="panel-heading">Event Summary
                     </header>
                     <div class="panel-body">
                       <form class="form-horizontal " method="get">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Name</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                          <div class="col-sm-8">
+                            <p class="form-control-static">Project-palooza</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" id="edit-button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Administrator</label>
-                          <div class="col-sm-10">
+                          <div class="col-sm-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Description</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                          <div class="col-sm-8">
+                            <p class="form-control-static">Things happen in places</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Start Date </label>
-                          <div class="col-sm-4">
-                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
+                          <label class="col-sm-2 control-label">Event Date</label>
+                          <div class="col-sm-8">
+                            <p class="form-control-static">10-12-2015</p>
+                          </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
                           </div>
                         </div>
+
+
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Event Location</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i>Event Picture</label>
+                          <div class="col-sm-2">
+                            <img src="img\12048903_10153709165902375_2021103471_n.jpg" class="img-thumbnail" alt="placeholder" width="200" height="200">
                           </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Invite Members</label>
-                          <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label" for="exampleInputFile"> <i class="fa fa-picture-o"></i> Event Picture</label>
-                          <div class="col-sm-10">
+                          <div class="col-sm-6">
                             <input type="file" id="exampleInputFile">
                             <p class="help-block">Upload a picture to represent your Event!</p>
                           </div>
@@ -190,12 +188,18 @@
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Administrator Email</label>
-                          <div class="col-lg-10">
+                          <div class="col-lg-8">
                             <p class="form-control-static">john.doe@upr.edu</p>
                           </div>
+                          <div class="col-sm-2">
+                            <button type="button" class="btn btn-default"><i class="fa fa-pencil-square-o"></i>Edit</button>
+                          </div>
                         </div>
-
-                        <button type="submit" class="btn btn-primary pull-right">Create</button>
+                        <div class="form-group">
+                          <div class="col-lg-12 col-centered">
+                            <button type="submit" class="btn btn-danger btn-block">DELETE EVENT</button>
+                          </div>
+                        </div>
                       </form>
                     </div>
                   </section>
