--- a/public/EventPage.html
+++ b/public/EventPage.html
@@ -48,9 +48,9 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
-    <div class="container">
+    <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <div class="navbar-header ">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -58,9 +58,12 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-brand" style="padding: 8px 15px; ">
-          <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
+          <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;">
+        </div>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
+
+      <!-- user login dropdown end -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
@@ -72,6 +75,7 @@
           <li>
             <a href="#"><i class="fa fa-users"></i> Followers</a>
           </li>
+
           <li>
             <a href="#"><i class="fa fa-briefcase"></i> Projects</a>
           </li>
@@ -87,20 +91,87 @@
           <li>
             <a href="#"><i class="fa fa-envelope"></i> Contact PIPS</a>
           </li>
+          <!-- user login dropdown start-->
+          <li class="dropdown pull-right">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <span class="profile-ava">
+                    <img alt="" src="img/avatar1_small.jpg">
+              </span>
+              <span class="username">Jenifer Smith</span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu extended logout">
+              <div class="log-arrow-up"></div>
+              <li>
+                <a href="#"><i class="icon_mail_alt"></i> My Inbox</a>
+              </li>
+              <li>
+                <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
+              </li>
+              <li>
+                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+              </li>
+             
+            </ul>
+          </li>
+          <!-- alert notification start-->
+          <li id="alert_notificatoin_bar" class="dropdown pull-right">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <i class="icon-bell-l"></i>
+              <span class="badge bg-important">7</span>
+            </a>
+            <ul class="dropdown-menu extended notification">
+              <div class="notify-arrow notify-arrow-blue"></div>
+              <li>
+                <p class="blue">You have 4 new notifications</p>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
+                  <span class="small italic pull-right">5 mins</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-warning"><i class="icon_pin"></i></span> John location.
+                  <span class="small italic pull-right">50 mins</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
+                  <span class="small italic pull-right">1 hr</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
+                  <span class="small italic pull-right"> Today</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">See all notifications</a>
+              </li>
+            </ul>
+          </li>
+          <!-- alert notification end-->
+
+          <li class="pull-left" style="vertical-align: top; display: table-cell; margin: 13px;">
+            <div id="search">
+              <a href="" class="glyphicon glyphicon-search " style="font-size: 25px;"></a>
+            </div>
+          </li>
+          <li class="pull-left" style="vertical-align: middle; display: table-cell; margin: 10px;">
+            <div>
+              <input class="form-control" type="text" id="lg">
+            </div>
+          </li>
+         
         </ul>
-        <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
-          <div id="search">
-            <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
-          </div>
-        </li>
-        <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 10px;">
-          <div>
-            <input class="form-control" type="text" id="lg">
-          </div>
-        </li>
       </div>
-      <!-- /.navbar-collapse -->
-      <!-- /.container -->
+      <!-- notificatoin dropdown end-->
+    </div>
+    <!-- /.container -->
   </nav>
   <!-- Page Grid-->
   <div class="container">
