--- a/public/ProfilePage_Index.html
+++ b/public/ProfilePage_Index.html
@@ -329,32 +329,18 @@
                                             <textarea class="form-control" id="content"></textarea>
                                           </div>
                                         </div>
-                                        <!-- Cateogry -->
-                                        <div class="form-group">
-                                          <label class="control-label col-lg-2">Category</label>
-                                          <div class="col-lg-10">
-                                            <select class="form-control">
-                                              <option value="">- Choose Cateogry -</option>
-                                              <option value="1">General</option>
-                                              <option value="2">News</option>
-                                              <option value="3">Media</option>
-                                              <option value="4">Funny</option>
-                                            </select>
-                                          </div>
-                                        </div>
                                         <!-- Tags -->
                                         <div class="form-group">
-                                          <label class="control-label col-lg-2" for="tags">Tags</label>
+                                          <label class="col-lg-2 control-label">Event Tags</label>
                                           <div class="col-lg-10">
-                                            <input type="text" class="form-control" id="tags">
+                                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Programming, Robotics" />
                                           </div>
                                         </div>
                                         <!-- Buttons -->
                                         <div class="form-group">
                                           <!-- Buttons -->
                                           <div class="col-lg-offset-2 col-lg-9">
-                                            <button type="submit" class="btn btn-primary">Publish</button>
-                                            <button type="submit" class="btn btn-danger">Save Draft</button>
+                                            <button type="submit" class="btn btn-primary">Post</button>
                                             <button type="reset" class="btn btn-default">Reset</button>
                                           </div>
                                         </div>
